--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Dexon - Marketing Agency HTML5 Template</title>
+	<title>Swiftpixels - Making Your Business Pixel Perfect</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/SwiftPixels Favicon.png">
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all">
 	<!-- carousel CSS -->
@@ -64,34 +64,39 @@
 			<div class="row align-items-center">
 				<div class="col-lg-2">
 					<div class="logo">
-						<a class="logo_img" href="index.html" title="dexon">
-							<img src="assets/images/logo.png" alt="logo">
+						<a class="logo_img" href="index.html" title="SwiftPixels">
+							<img src="assets/images/BLACK SVG SP.svg" width="230" height="40" alt="logo">
 						</a>
-						<a class="main_sticky" href="index.html" title="dexon">
-							<img src="assets/images/logo2.png" alt="logo">
+						<a class="main_sticky" href="index.html" title="SwiftPixels">
+							<img src="assets/images/white svg SP.svg" width="230" height="40" alt="logo">
 						</a>
 					</div>
 				</div>
 				<div class="col-lg-10">
 					<nav class="dexon_menu">
 						<ul class="nav_scroll">
-							<li><a href="#">Home <span><i class="fas fa-chevron-down"></i></span></a> 
-								<ul class="sub-menu">
-									<li><a href="index.html">Marketing Agency</a></li>
-									<li><a href="index-2.html">SEO Agency</a></li>
-								</ul>
-							</li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="#">Services <span><i class="fas fa-chevron-down"></i></span></a>
 								<ul class="sub-menu">
-									<li><a href="service-details.html">Marketing Strategy</a></li>
-									<li><a href="service-details.html">Enterprise Consulting</a></li>
-									<li><a href="service-details.html">Growth Tracking</a></li>
-									<li><a href="service-details.html">Social Media Marketing</a></li>
-									<li><a href="service-details.html">Keyword Research</a></li>
+									<li><a href="service-details.html">Brand & Identity Design
+									</a></li>
+									<li><a href="service-details.html">Web Design & Development
+									</a></li>
+									<li><a href="service-details.html">Brand Identity & Design
+									</a></li>
+									<li><a href="service-details.html">Advertising & Marketing Campaigns
+									</a></li>
+									<li><a href="service-details.html">Software Development
+									</a></li>
+									<li><a href="service-details.html">Space Design
+									</a></li>
+									<li><a href="service-details.html">Videography & Photography
+									</a></li>
+
 								</ul>
 							</li>
-							<li><a href="#">Pages <span><i class="fas fa-chevron-down"></i></span></a>
+							<!-- <li><a href="#">Pages <span><i class="fas fa-chevron-down"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="about.html">About Us</a></li>
 									<li><a href="service.html">Service One</a></li>
@@ -102,27 +107,27 @@
 									<li><a href="faq.html">Faq</a></li>
 									<li><a href="contact.html">Contact Us</a></li>
 								</ul>
-							</li>
-							<li><a href="#">Shop <span><i class="fas fa-chevron-down"></i></span></a>
+							</li> -->
+							<!-- <li><a href="#">Shop <span><i class="fas fa-chevron-down"></i></span></a>
 								<ul class="sub-menu">
 									<li><a href="shop.html">Shop One</a></li>
 									<li><a href="shop-2.html">Shop Two</a></li>
 									<li><a href="shop-details.html">Shop Details</a></li>
 								</ul>
-							</li>
-							<li><a href="#">Blog <span><i class="fas fa-chevron-down"></i></span></a>
-								<ul class="sub-menu">
+							</li> -->
+							<li><a href="blog-2.html">Blog </a>
+								<!-- <ul class="sub-menu">
 									<li><a href="blog-grid.html">Blog Gird</a></li>
 									<li><a href="blog.html">Blog List</a></li>
 									<li><a href="blog-2.html">Left Sidebar</a></li>
 									<li><a href="blog-details.html">Blog Details</a></li>
-								</ul>
+								</ul> -->
 							</li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<!-- header button -->
 						<div class="header-button">
-							<a href="contact.html"><i class="bi bi-envelope"></i> example@gmail.com</a>
+							<a href="contact.html"><i class="bi bi-envelope"></i> info@swiftpixels.in</a>
 						</div>
 					</nav>
 				</div>
@@ -137,8 +142,8 @@
 				<ul class="nav_scroll">
 					<li><a href="#">Home <span><i class="fas fa-chevron-down"></i></span></a> 
 						<ul class="sub-menu">
-							<li><a href="index.html">Marketing Agency</a></li>
-							<li><a href="index-2.html">SEO Agency</a></li>
+							<li><a href="index.html">Where Creativity</a></li>
+							<li><a href="index-2.html">Meets Innovation.</a></li>
 						</ul>
 					</li>
 					<li><a href="about.html">About</a></li>
@@ -199,10 +204,12 @@
 			<div class="row hero-bg">
 				<div class="col-lg-12">
 					<div class="hero-content">
-						<h1> Digital Products </h1>
-						<h2> Use Marketing </h2>
+						<h1> Where Creativity </h1>
+						<h2> Meets Innovation. </h2>
 						<div class="hero-content-text-btn">
-							<p>Distinctively supply exceptional services after uniquely integrate alternative markets rather emerging initiatives. </p>
+							<p>Leading your business toward transformation with cutting-edge digital marketing strategies and innovative solutions.
+
+							</p>
 							<div class="hero-button">
 								<a href="about.html"> Get Started <i class="bi bi-arrow-right-short"></i></a>
 							</div>
@@ -246,7 +253,7 @@
 				<div class="col-lg-12">
 					<div class="dexon-section-title padding-lg2">
 						<h1>Growing your Revenue using</h1>
-						<h1>Dexon Services</h1>
+						<h1>SwiftPixels Services</h1>
 					</div>
 				</div>
 				<div class="dream-shape">
@@ -264,7 +271,7 @@
 						</div>
 						<div class="feature-content">
 							<h2>Development</h2>
-							<p>Allamcorper risus ultrices risus lorem libero in pellentesque potenti more Vulputate ut aliquam</p>
+							<p>Build robust, user-friendly digital solutions tailored to your business's unique needs and goals.</p>
 						</div>
 					</div>
 				</div>
@@ -275,7 +282,7 @@
 						</div>
 						<div class="feature-content">
 							<h2>e-Commerce</h2>
-							<p>Allamcorper risus ultrices risus lorem libero in pellentesque potenti more Vulputate ut aliquam</p>
+							<p>Create seamless, high-converting online stores to drive sales and enhance customer experience.</p>
 						</div>
 					</div>
 				</div>
@@ -286,7 +293,7 @@
 						</div>
 						<div class="feature-content">
 							<h2>Marketing</h2>
-							<p>Allamcorper risus ultrices risus lorem libero in pellentesque potenti more Vulputate ut aliquam</p>
+							<p>Boost brand visibility with tailored strategies to engage, convert, and retain audiences.</p>
 						</div>
 					</div>
 				</div>
@@ -301,13 +308,15 @@
 					<div class="dexon-section-title">
 						<h1>Specialize in help Companies</h1>
 						<h1>Promote Your Business</h1>
-						<p>Ullamcorper risus ultrices risus lorem. Mollis libero in pellentesque potenti. Vulputate ut aliquam, consectetur turpis odio.</p>
+						<p>We empower businesses to reach their full potential by crafting tailored marketing strategies, developing cutting-edge digital solutions, and leveraging the latest technologies to maximize brand visibility, drive engagement, and achieve sustainable growth.</p>
 					</div>
 					<div class="about-item-list">
 						<ul>
-							<li><i class="bi bi-check2-all"></i> Continually engineer ethical partnership </li>
-							<li><i class="bi bi-check2-all"></i> Seamlessly pursue orthogonal customer service  </li>
-							<li><i class="bi bi-check2-all"></i> Dynamically reconceptualize value </li>
+							<li><i class="bi bi-check2-all"></i> Strategic marketing tailored for success
+							</li>
+							<li><i class="bi bi-check2-all"></i> Cutting-edge digital tools implementation
+							</li>
+							<li><i class="bi bi-check2-all"></i> Data-driven insights for optimal results</li>
 						</ul>
 					</div>
 					<div class="about-button2">
@@ -319,18 +328,18 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="single-counter-box">
 						<div class="counter-title">
-							<h1 class="counter">16</h1>
-							<h1>M+</h1>
+							<h1 class="counter">45</h1>
+							<h1>+</h1>
 						</div>
 						<div class="counter-text">
-							<p>Total Advertising Partners</p>
+							<p>No Of Clients</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single-counter-box">
 						<div class="counter-title">
-							<h1 class="counter">16</h1>
+							<h1 class="counter">26</h1>
 							<h1>%</h1>
 						</div>
 						<div class="counter-text">
@@ -341,11 +350,11 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="single-counter-box">
 						<div class="counter-title">
-							<h1 class="counter">5</h1>
-							<h1>K+</h1>
+							<h1 class="counter">15</h1>
+							<h1>+</h1>
 						</div>
 						<div class="counter-text">
-							<p>Social Campaigns</p>
+							<p>Projects Completed</p>
 						</div>
 					</div>
 				</div>
@@ -353,10 +362,10 @@
 					<div class="single-counter-box">
 						<div class="counter-title">
 							<h1 class="counter">12</h1>
-							<h1>K+</h1>
+							<h1>+</h1>
 						</div>
 						<div class="counter-text">
-							<p>Paid Marketing Tools</p>
+							<p>Saas Projects Developed</p>
 						</div>
 					</div>
 				</div>
@@ -391,14 +400,17 @@
 							<div class="dexon-section-title white padding-lg1">
 								<h1>Improve your Business</h1>
 								<h1 class="sections">to the Next Levels</h1>
-								<p>Ullamcorper risus ultrices risus lorem. Mollis libero in pellentesque Vulputate ut aliquam, consectetur turpis</p>
+								<p>From innovative marketing strategies to advanced digital tools, we empower your business to scale efficiently, reach wider audiences, and achieve extraordinary results.
+								</p>
 							</div>
 						</div>
 						<div class="col-lg-12">
 							<div class="single-service-box upper2">
 								<div class="service-content">
 									<h3 class="service-title">Social Media Mastery</h3>
-									<p class="service-desc">Competently leverage other's diverse action items via vertical to aollaboratively harness ubiquitous materials</p>
+									<p class="service-desc">Harness the power of social platforms to build your brand, engage audiences, and drive meaningful connections.
+
+									</p>
 									<a class="dexon-button" href="service.html">Read More <i class="bi bi-arrow-right-short"></i></a>
 								</div>
 							</div>
@@ -411,7 +423,9 @@
 							<div class="single-service-box upper">
 								<div class="service-content">
 									<h3 class="service-title">Customer Increasing</h3>
-									<p class="service-desc">Competently leverage other's diverse action items via vertical to aollaboratively harness ubiquitous materials</p>
+									<p class="service-desc">Attract and retain loyal customers with personalized strategies designed to meet their needs and enhance satisfaction.
+
+									</p>
 									<a class="dexon-button" href="service-2.html">Read More <i class="bi bi-arrow-right-short"></i></a>
 								</div>
 							</div>
@@ -420,7 +434,8 @@
 							<div class="single-service-box upper3">
 								<div class="service-content">
 									<h3 class="service-title">Sales Statistics</h3>
-									<p class="service-desc">Competently leverage other's diverse action items via vertical to aollaboratively harness ubiquitous materials</p>
+									<p class="service-desc">Leverage data-driven insights to optimize sales performance, track progress, and achieve measurable business growth effectively.
+									</p>
 									<a class="dexon-button" href="service-2.html">Read More <i class="bi bi-arrow-right-short"></i></a>
 								</div>
 							</div>
@@ -455,8 +470,8 @@
 				<div class="col-lg-12">
 					<div class="dexon-section-title padding-lg text-center dreamit">
 						<h1>What Say Our Customers</h1>
-						<h1>About Dexon</h1>
-						<p>Distinctively supply exceptional services after uniquely integrate alternative markets rather emerging initiatives. </p>
+						<h1>About SwiftPixels</h1>
+						<p>Hear from our clients about how SwiftPixels has transformed their businesses with innovative and impactful solutions.</p>
 					</div>
 				</div>
 				<div class="dream-shape">
@@ -584,7 +599,8 @@
 					<div class="dexon-section-title">
 						<h1> We use various marketing </h1>
 						<h1> channels to reach Sales </h1>
-						<p> Ullamcorper risus ultrices risus lorem. Mollis libero in pellentesque potenti. Vulputate ut aliquam, consectetur turpis odio. </p>
+						<p>Leveraging diverse marketing channels to connect with audiences, drive engagement, and boost sales effectively across platforms.
+						</p>
 					</div>
 					
 					<div class="about-counter-style">
@@ -646,7 +662,8 @@
 					<div class="dexon-section-title white">
 						<h1>Are You Ready to for Your</h1>
 						<h1>Business Success?</h1>
-						<p>Ullamcorper risus ultrices risus lorem. Mollis libero in pellentesque Vulputate ut aliquam, consectetur turpis odio. </p>
+						<p>Take the first step toward achieving your goals with tailored strategies designed for your business's lasting success.
+						</p>
 					</div>
 					<div class="dexon-button">
 						<a class="dexon-button" href="contact.html">Contact Us <i class="bi bi-arrow-right-short"></i></a>
@@ -659,7 +676,7 @@
 							<img src="assets/images/resource/call.png" alt="">
 						</div>
 						<div class="call-number">
-							<h1>+98 069 (2350) 020</h1>
+							<h1>+91 8956111712</h1>
 						</div>
 						<div class="call-text">
 							<span>(What’s App/Call)</span>
@@ -698,11 +715,11 @@
 					<div class="widget widgets-company-info">
 						<div class="dreamhub-logo">
 						<a class="logo_thumb" href="index.html" title="dreamhub">
-							<img src="assets/images/logo.png" alt="" />
+							<img src="assets/images/BLACK SVG SP.svg" width="240" height="40" alt="" />
 						</a>
 					</div>
 						<div class="company-info-desc">
-							<p> Ullamcorper risus ultrices in lorem. Vulputate aliquam, consecte error free scenarios done. </p>
+							<p> Making Your Business Pixel Perfect </p>
 						</div>
 						<div class="follow-company-icon">
 							<a href="#"> <i class="fab fa-facebook-f"></i> </a>
@@ -731,9 +748,9 @@
 						<h4 class="widget-title"> Contact Us </h4>
 						<div class="menu-quick-info-content">
 							<ul class="footer-info">
-								<li><a href="#"> Royels, Street Road 27, New York, <br> USA - 87453 </a></li>
-								<li><a class="border-undr" href="#"> example@gmail.com </a></li>
-								<li><a href="#"> +98 069 (2350) 020 </a></li>
+								<li><a href="#"> Hadapsar <br> Pune - 411028 </a></li>
+								<li><a class="border-undr" href="#"> info@swiftpixels.in </a></li>
+								<li><a href="#"> +91 8956111712 </a></li>
 							</ul>
 						</div>
 					</div>
@@ -759,7 +776,7 @@
 				<div class="col-lg-6 col-md-6">
 					<div class="footer-bottom-content">
 						<div class="footer-bottom-content-copy">
-							<p>2023 - 2030 | Alrights reserved by Dream IT</p>
+							<p>2025 - 2030 | Alrights reserved by SwiftPixels Digital Solutions</p>
 						</div>
 					</div>
 				</div>
